--- a/HuaShanApp/app/src/main/res/layout/layout_det_img_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_det_img_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.percent.PercentFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,8 +9,9 @@
     <ImageView
         android:id="@+id/img_item"
         android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:background="#3c3c3c"/>
 
-</FrameLayout>
+
+</android.support.percent.PercentFrameLayout>
