--- a/HuaShanApp/app/src/main/res/layout/view_details_2.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_details_2.xml
@@ -7,8 +7,12 @@
     android:orientation="vertical">
 
     <android.support.percent.PercentFrameLayout
+        android:id="@+id/header_view1"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:background="#fff"
+        android:visibility="visible">
 
         <TextView
             app:layout_widthPercent="30%"
