--- a/HuaShanApp/app/src/main/res/layout/activity_experience.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_experience.xml
@@ -178,6 +178,7 @@
                 app:layout_heightPercent="10%"
                 android:layout_gravity="bottom"
                 android:background="#46a3ff"
+                android:onClick="@{handler.toPurchase}"
                 >
                 <TextView
                     android:layout_width="wrap_content"
