--- a/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
@@ -74,6 +74,7 @@
         </LinearLayout>
 
         <android.support.percent.PercentFrameLayout
+            android:id="@+id/content_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
@@ -82,6 +83,155 @@
 
             >
 
+
+            <android.support.percent.PercentFrameLayout
+                android:id="@+id/pay_pl"
+                android:layout_width="match_parent"
+                app:layout_heightPercent="15%"
+                app:layout_marginTopPercent="20%"
+                android:background="#fff">
+
+                <TextView
+                    android:id="@+id/pay_method"
+                    app:layout_widthPercent="78%"
+                    app:layout_heightPercent="50%"
+                    android:layout_gravity="right"
+                    android:text="账户余额"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:gravity="center_vertical|bottom"
+                    android:textSize="18dp"/>
+
+                <TextView
+                    android:id="@+id/pay_content"
+                    app:layout_widthPercent="78%"
+                    app:layout_heightPercent="40%"
+                    android:layout_gravity="right|bottom"
+                    android:text="可用余额 3,214.47"
+                    android:textSize="13dp"
+                    android:textColor="#7b7b7b"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_marginRightPercent="5%"
+                    android:layout_gravity="right|center_vertical"
+                    android:onClick="@{handler.onPaymentMethod}">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="更换支付方式"
+                        android:textSize="10dp"
+                        android:textColor="#0894EC"/>
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:src="@drawable/goto_icon"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/pay_img"
+                    app:layout_widthPercent="15%"
+                    app:layout_heightPercent="55%"
+                    android:layout_gravity="center_vertical"
+                    app:layout_marginLeftPercent="5%"
+                    android:src="@drawable/zhye_icon"/>
+
+
+            </android.support.percent.PercentFrameLayout>
+
+            <TextView
+                android:id="@+id/can_purchase"
+                android:layout_width="match_parent"
+                app:layout_heightPercent="8%"
+                app:layout_marginTopPercent="35%"
+                app:layout_marginLeftPercent="8%"
+                android:gravity="center_vertical"
+                android:text="剩余可购金额114500.00元"/>
+
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="8%"
+                app:layout_marginTopPercent="43%"
+                android:background="#fff">
+
+                <TextView
+                    app:layout_widthPercent="15%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="5%"
+                    android:gravity="center"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:text="金额"
+                    android:textSize="15dp"
+                    android:textColor="#000"/>
+
+                <EditText
+                    android:id="@+id/ed_amountofmoney"
+                    app:layout_widthPercent="80%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="20%"
+                    android:inputType="number"
+                    android:background="#fff"
+                    android:hint="100元起购"
+                    android:textSize="15dp"/>
+
+            </android.support.percent.PercentFrameLayout>
+
+            <TextView
+                android:id="@+id/tv_prompt"
+                android:layout_width="match_parent"
+                app:layout_heightPercent="7%"
+                app:layout_marginTopPercent="51%"
+                app:layout_marginLeftPercent="10%"
+                android:gravity="center_vertical"
+                android:textSize="12dp"
+                android:textColor="#ff0000"/>
+
+
+            <TextView
+                android:id="@+id/bt_purchase"
+                android:layout_width="match_parent"
+                app:layout_heightPercent="8%"
+                app:layout_marginTopPercent="58%"
+                app:layout_marginLeftPercent="5%"
+                app:layout_marginRightPercent="5%"
+                android:background="@drawable/bg_fillet_0894ec_2dp"
+                android:gravity="center"
+                android:text="购买"
+                android:textSize="15dp"
+                android:textColor="#fff"
+                android:onClick="@{handler.onPurchase}"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="5%"
+                app:layout_marginTopPercent="68%"
+                app:layout_marginLeftPercent="5%"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/cb_agreement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:layout_marginTopPercent="70%"
+                    android:text="我已阅读并同意签署"
+                    android:textColor="#7b7b7b"
+                    android:textSize="11dp"/>
+
+                <TextView
+                    android:id="@+id/tv_agreement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_marginLeftPercent="5%"
+                    app:layout_marginTopPercent="68%"
+                    android:text="《投资协议》"
+                    android:textColor="#0894EC"
+                    android:textSize="11dp"
+                    android:onClick="@{handler.onAgreement}"/>
+
+            </LinearLayout>
 
             <android.support.percent.PercentFrameLayout
                 android:layout_width="match_parent"
@@ -105,150 +255,11 @@
                     app:layout_marginBottomPercent="15%"
                     app:layout_marginLeftPercent="7%"
                     android:layout_gravity="bottom"
-                    android:text="年化收益率8.6     |    投资期限6个月"
+                    android:text="年化收益率8.6     |     投资期限6个月"
                     android:textColor="@color/Investmentdetails_part1_text_size"
                     android:textSize="15dp"/>
 
             </android.support.percent.PercentFrameLayout>
-
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="15%"
-                app:layout_marginTopPercent="20%"
-                android:background="#fff">
-
-                <ImageView
-                    app:layout_widthPercent="15%"
-                    app:layout_heightPercent="60%"
-                    android:layout_gravity="center_vertical"
-                    app:layout_marginLeftPercent="5%"
-                    android:src="@drawable/zgyh_icon"/>
-
-                <TextView
-                    app:layout_widthPercent="78%"
-                    app:layout_heightPercent="50%"
-                    android:layout_gravity="right"
-                    android:text="中国银行(尾号7634)"
-                    style="@style/Base.TextAppearance.AppCompat.Body1"
-                    android:gravity="center_vertical|bottom"
-                    android:textSize="18dp"/>
-
-                <TextView
-                    app:layout_widthPercent="78%"
-                    app:layout_heightPercent="40%"
-                    android:layout_gravity="right|bottom"
-
-                    android:text="单笔限额1万,单日限额1万"
-                    android:textSize="11dp"
-                    android:textColor="#7b7b7b"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="8dp"
-                    android:layout_gravity="right|center_vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="更换支付方式"
-                        android:textSize="10dp"
-                        android:textColor="#0894EC"/>
-                    <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:src="@drawable/goto_icon"/>
-
-                </LinearLayout>
-
-
-
-            </android.support.percent.PercentFrameLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                app:layout_heightPercent="8%"
-                app:layout_marginTopPercent="35%"
-                app:layout_marginLeftPercent="10%"
-                android:gravity="center_vertical"
-                android:text="剩余可购金额114500.00元"/>
-
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="8%"
-                app:layout_marginTopPercent="43%"
-                android:background="#fff">
-
-                <TextView
-                    app:layout_widthPercent="15%"
-                    android:layout_height="match_parent"
-                    app:layout_marginLeftPercent="5%"
-                    android:gravity="center"
-                    style="@style/Base.TextAppearance.AppCompat.Body1"
-                    android:text="金额"
-                    android:textSize="15dp"
-                    android:textColor="#000"/>
-
-                <EditText
-                    app:layout_widthPercent="80%"
-                    android:layout_height="match_parent"
-                    app:layout_marginLeftPercent="20%"
-                    android:background="#fff"
-                    android:hint="100元起购"
-                    android:textSize="15dp"/>
-
-            </android.support.percent.PercentFrameLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                app:layout_heightPercent="7%"
-                app:layout_marginTopPercent="51%"
-                app:layout_marginLeftPercent="10%"
-                android:gravity="center_vertical"
-                android:text="预计收益为20.32元"
-                android:textSize="12dp"
-                android:textColor="#ff0000"/>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                app:layout_heightPercent="8%"
-                app:layout_marginTopPercent="58%"
-                app:layout_marginLeftPercent="5%"
-                app:layout_marginRightPercent="5%"
-                android:background="@drawable/bg_fillet_0894ec_2dp"
-                android:gravity="center"
-                android:text="购买"
-                android:textSize="15dp"
-                android:textColor="#fff"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="5%"
-                app:layout_marginTopPercent="68%"
-                app:layout_marginLeftPercent="5%"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    app:layout_marginTopPercent="70%"
-                    android:text="我已阅读并同意签署"
-                    android:textColor="#7b7b7b"
-                    android:textSize="11dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_marginLeftPercent="5%"
-                    app:layout_marginTopPercent="68%"
-                    android:text="《投资协议》"
-                    android:textColor="#0894EC"
-                    android:textSize="11dp"/>
-
-            </LinearLayout>
-
 
 
         </android.support.percent.PercentFrameLayout>
