--- a/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
@@ -12,6 +12,7 @@
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
+        android:id="@+id/purchase_pl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fff"
