--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -53,4 +53,9 @@
     <dimen name="todayfragment_part4_text_size">15dp</dimen>
     
     <dimen name="todayfragment_new_text_size_1">12dp</dimen>
+
+    <!--PromptDialog-->
+    <dimen name="promptdialog_text_size_1">15dp</dimen>
+    <dimen name="promptdialog_text_size_2">12dp</dimen>
+    <dimen name="promptdialog_text_size_3">15dp</dimen>
 </resources>
