--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -58,4 +58,5 @@
     <dimen name="promptdialog_text_size_1">15dp</dimen>
     <dimen name="promptdialog_text_size_2">12dp</dimen>
     <dimen name="promptdialog_text_size_3">15dp</dimen>
+    <dimen name="promptdialog_text_size_4">18dp</dimen>
 </resources>
